updated body information

--- a/index.html
+++ b/index.html
@@ -17,22 +17,23 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am chemist turned software business analyst, with a passion 
+        for software, and creating things - physical or digital.></form></p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Winston-Salem, NC</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Building mechanical keyboards, and 3D printing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software Engineer at a major tech company</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Salt Lake City, UT</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To scratch the itch of creating, and to "make cool shit and put it on the internet" (- AvE)</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/waxpoetik">Github</a></li>
         </ul>
     </footer>
 </body>
