--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <section class="details">
       <h1>Introduction</h1>
       <p>I am chemist turned software business analyst, with a passion 
-        for software, and creating things - physical or digital.></form></p>
+        for software, and creating things - physical or digital.</form></p>
       <h1>Where I'm From</h1>
       <p>Winston-Salem, NC</p>
       <h1>What are your favorite hobbies?</h1>
